--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,12 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
 $color-grey-light-1: #f3f2f2;
 
 $color-grey-dark: #777;
@@ -16,3 +22,6 @@ $gap-y: 8rem;
 
 //FONT-SIZES
 $default-font-size: 1.6rem;
+
+//BOX-SHADOWS
+$box-shadow-light: 1rem 2rem 4rem rgba($color-black, 0.2);
