add card styles

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,15 +1,16 @@
 //COLORS
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+$color-primary: #45b86c;
+$color-primary-light: #73d662;
+$color-primary-dark: #0b7451;
 
-$color-secondary-light: #ffb900;
-$color-secondary-dark: #ff7730;
+$color-secondary-light: #e6a800;
+$color-secondary-dark: #d65e1d;
 
-$color-tertiary-light: #2998ff;
-$color-tertiary-dark: #5643fa;
+$color-tertiary-light: #364add;
+$color-tertiary-dark: #0f075a;
 
 $color-grey-light-1: #f3f2f2;
+$color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
 $color-white: #fff;
