--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
-  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-image: linear-gradient(to right, #73d662, #0b7451);
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
@@ -103,6 +103,12 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
+.u-margin-top-huge {
+  margin-top: 10rem; }
+
 .btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
@@ -130,6 +136,12 @@ body {
   .btn--white::after {
     background-color: #fff; }
 
+.btn--green {
+  background-color: #45b86c;
+  color: #fff; }
+  .btn--green::after {
+    background-color: #45b86c; }
+
 .btn::after {
   content: '';
   display: inline-block;
@@ -151,13 +163,13 @@ body {
   padding: 0.5rem;
   text-decoration: none;
   display: inline-block;
-  color: #55c57a;
-  border-bottom: 1px solid #55c57a;
+  color: #45b86c;
+  border-bottom: 1px solid #45b86c;
   transition: all 0.2s; }
 
 .btn-text:hover {
   border-radius: 0.25rem;
-  background: #55c57a;
+  background: #45b86c;
   color: #fff;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   transform: translateY(-2px); }
@@ -188,7 +200,7 @@ body {
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 2;
-      outline: 1.5rem solid #55c57a; }
+      outline: 1.5rem solid #45b86c; }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
@@ -204,7 +216,7 @@ body {
     font-size: 6rem;
     margin-bottom: 0.5rem;
     display: inline-block;
-    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    background-image: linear-gradient(to right, #73d662, #0b7451);
     -webkit-background-clip: text;
     color: transparent; }
   .feature-box:hover {
@@ -214,15 +226,13 @@ body {
   perspective: 60rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem; }
+  height: 52rem; }
   .card__side {
-    color: #fff;
-    font-size: 2rem;
-    height: 50rem;
     transition: all 0.8s ease;
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
     width: 100%;
     backface-visibility: hidden;
     border-radius: 0.7rem;
@@ -232,12 +242,12 @@ body {
       background-color: #fff; }
     .card__side--back {
       transform: rotateY(180deg); }
-      .card__side--back-1 {
-        background: linear-gradient(120deg, #ffb900, #ff7730); }
-      .card__side--back-2 {
-        background: linear-gradient(120deg, #7ed56f, #28b485); }
-      .card__side--back-3 {
-        background: linear-gradient(120deg, #2998ff, #5643fa); }
+      .card__side--back--1 {
+        background: linear-gradient(120deg, #e6a800, #d65e1d); }
+      .card__side--back--2 {
+        background: linear-gradient(120deg, #73d662, #0b7451); }
+      .card__side--back--3 {
+        background: linear-gradient(120deg, #364add, #0f075a); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -250,11 +260,61 @@ body {
     -moz-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
     .card__picture--1 {
-      background-image: linear-gradient(120deg, #ffb900, #ff7730), url("../img/nat-5.jpg"); }
+      background-image: linear-gradient(120deg, #e6a800, #d65e1d), url("../img/nat-5.jpg"); }
     .card__picture--2 {
-      background-image: url("../img/nat-5.jpg"); }
+      background-image: linear-gradient(120deg, #73d662, #0b7451), url("../img/nat-6.jpg"); }
     .card__picture--3 {
-      background-image: url("../img/nat-5.jpg"); }
+      background-image: linear-gradient(120deg, #364add, #0f075a), url("../img/nat-7.jpg"); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    border-radius: 3px;
+    -webkit-box-decoration-break: clone;
+    -moz-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(230, 168, 0, 0.85), rgba(214, 94, 29, 0.85)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(115, 214, 98, 0.85), rgba(11, 116, 81, 0.85)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(54, 74, 221, 0.85), rgba(15, 7, 90, 0.85)); }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    color: #fff;
+    margin-bottom: 8rem; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
 
 .row {
   max-width: 114rem;
@@ -278,7 +338,7 @@ body {
 .header {
   position: relative;
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(115, 214, 98, 0.8), rgba(11, 116, 81, 0.8)), url("../img/hero.jpg");
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
@@ -302,7 +362,7 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
+  background-image: linear-gradient(to right bottom, rgba(115, 214, 98, 0.8), rgba(11, 116, 81, 0.8)), url("../img/nat-4.jpg");
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem; }
