--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 @import 'abstracts/variables';
 
 @import 'base/animations';
-@import 'base/base';
+@import 'base/reset';
 @import 'base/typography';
 @import 'base/utilities';
 
@@ -11,6 +11,7 @@
 @import 'components/composition';
 @import 'components/feature-box';
 @import 'components/card';
+@import 'components/story';
 
 @import 'layout/grid';
 @import 'layout/header';
