--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -26,10 +26,11 @@
 
 body {
   font-family: 'Lato', sans-serif;
-  font-family: 400;
+  font-weight: 400;
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
+  list-style-type: none;
+  text-decoration: none;
 }
 
 .heading-secondary {
