--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,16 @@
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+  list-style-type: inherit;
+  text-decoration: inherit; }
 
 html {
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
 
 .heading-primary {
   color: #fff;
@@ -62,10 +65,11 @@ body {
 
 body {
   font-family: 'Lato', sans-serif;
-  font-family: 400;
+  font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #575757;
+  list-style-type: none;
+  text-decoration: none; }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -92,24 +96,24 @@ body {
     margin-bottom: 3rem; }
 
 .u-center-text {
-  text-align: center; }
+  text-align: center !important; }
 
 .u-margin-bottom-big {
-  margin-bottom: 8rem; }
+  margin-bottom: 8rem !important; }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem !important; }
 
 .u-margin-bottom-small {
-  margin-bottom: 1.5rem; }
+  margin-bottom: 1.5rem !important; }
 
 .u-margin-top-big {
-  margin-top: 8rem; }
+  margin-top: 8rem !important; }
 
 .u-margin-top-huge {
-  margin-top: 10rem; }
+  margin-top: 10rem !important; }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
@@ -117,7 +121,9 @@ body {
   border-radius: 10rem;
   transition: all 0.2s;
   position: relative;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  cursor: pointer;
+  border: none; }
 
 .btn:hover {
   transform: translate(0, -3px);
@@ -126,13 +132,14 @@ body {
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0; }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   transform: translate(0, -1px) scale(0.98);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn--white {
   background-color: #fff;
-  color: #777; }
+  color: #575757; }
   .btn--white::after {
     background-color: #fff; }
 
@@ -160,7 +167,7 @@ body {
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
-  padding: 0.5rem;
+  padding: 0.5rem 2rem;
   text-decoration: none;
   display: inline-block;
   color: #45b86c;
@@ -317,17 +324,16 @@ body {
     font-weight: 100; }
 
 .story {
+  position: relative;
   width: 75%;
   margin: 0 auto;
-  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3);
   background-color: #fff;
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
   font-size: 1.6rem;
   transform: skewX(-12deg); }
-  .story > * {
-    transform: skew(12deg); }
   .story__shape {
     width: 15rem;
     height: 15rem;
@@ -336,9 +342,196 @@ body {
     -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem); }
+    transform: translateX(-3rem) skew(12deg); }
   .story__img {
-    height: 100%; }
+    height: 100%;
+    transform: translateX(-3.7rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: 0.5s; }
+  .story__text {
+    transform: skew(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.7rem;
+    opacity: 0;
+    transition: 0.5s; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+    backface-visibility: hidden; }
+  .story:hover .story__img {
+    transform: scale(1) translateX(-3.7rem);
+    filter: blur(2px) brightness(80%); }
+
+.bg-video-container {
+  opacity: 0.25;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1; }
+  .bg-video-container__video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  padding: 1.5rem 2rem;
+  border-radius: 3px;
+  border: 0;
+  border-bottom: 3px solid transparent;
+  background-color: #fff;
+  transition: 0.2s;
+  display: block;
+  width: 90%; }
+  .form__input::placeholder {
+    color: #575757; }
+  .form__input:focus {
+    outline: 0;
+    box-shadow: 1rem 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-bottom: 3px solid #45b86c; }
+    .form__input:focus:invalid {
+      border-bottom: 3px solid #d65e1d; }
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: 0.7rem;
+  display: block;
+  transition: 0.3s;
+  color: #000; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
+
+.form__radio-group {
+  width: 49%;
+  display: inline-block; }
+
+.form__radio-label {
+  cursor: pointer;
+  font-size: 1.6rem;
+  position: relative;
+  padding-left: 4.5rem; }
+
+.form__radio-button {
+  height: 3rem;
+  width: 3rem;
+  border: 5px solid #45b86c;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  top: -4px;
+  left: 0; }
+  .form__radio-button::after {
+    content: '';
+    background-color: #45b86c;
+    display: block;
+    height: 1.2rem;
+    width: 1.2rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.2s; }
+
+.form__radio-input:checked + .form__radio-label .form__radio-button::after {
+  opacity: 1; }
+
+.form__radio-input {
+  display: none; }
+
+.navigation__checkbox {
+  display: none; }
+
+.navigation__button {
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 30;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3); }
+
+.navigation__background {
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  z-index: 10;
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  background-image: radial-gradient(#73d662, #0b7451);
+  transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1); }
+
+.navigation__nav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  opacity: 0;
+  width: 0;
+  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+  width: 100%; }
+
+.navigation__item {
+  margin: 1rem; }
+
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 3rem;
+  font-weight: 300;
+  padding: 1rem 2.5rem;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 3px;
+  background-image: linear-gradient(120deg, transparent 50%, #fff 50%);
+  background-size: 220%;
+  transition: 0.4s; }
+  .navigation__link:link span, .navigation__link:visited span {
+    margin-right: 1.5rem; }
+
+.navigation__link:hover, .navigation__link:active {
+  background-position: right;
+  color: #45b86c;
+  transform: translateX(1rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%; }
 
 .row {
   max-width: 114rem;
@@ -379,6 +572,36 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  color: #f3f2f2; }
+  .footer__logo {
+    width: 15rem; }
+  .footer__navigation {
+    border-top: 1px solid #575757;
+    display: inline-block;
+    padding-top: 2rem; }
+  .footer__item {
+    display: inline-block; }
+    .footer__item:not(:last-child) {
+      margin-right: 1.5rem; }
+  .footer__link:link, .footer__link:visited {
+    color: #f3f2f2;
+    text-transform: uppercase;
+    transition: color 0.2s; }
+  .footer__link:hover, .footer__link:active {
+    color: #45b86c;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid #45b86c; }
+  .footer__copyright {
+    border-top: 1px solid #575757;
+    padding-top: 2rem;
+    width: 85%;
+    float: right; }
+
 .section-about {
   background-color: #f3f2f2;
   padding: 25rem 0;
@@ -398,6 +621,23 @@ body {
   padding: 25rem 0 15rem;
   margin-top: -10rem; }
 
-.section-stories {
+.section-testimonials {
+  position: relative;
+  padding: 15rem 0; }
+
+.section-booking {
   padding: 15rem 0;
-  background-color: #f3f2f2; }
+  background: linear-gradient(135deg, #73d662, #0b7451); }
+
+.booking {
+  background: linear-gradient(105deg, rgba(255, 255, 255, 0.85) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 50rem;
+  width: 100%;
+  border-radius: 3px;
+  box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3); }
+  .booking__form {
+    width: 50%;
+    padding: 6rem; }
