--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,7 +12,9 @@ $color-tertiary-dark: #0f075a;
 $color-grey-light-1: #f3f2f2;
 $color-grey-light-2: #eee;
 
-$color-grey-dark: #777;
+$color-grey-dark: rgb(87, 87, 87);
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 
@@ -26,3 +28,9 @@ $default-font-size: 1.6rem;
 
 //BOX-SHADOWS
 $box-shadow-light: 1rem 2rem 4rem rgba($color-black, 0.2);
+$box-shadow-medium: 1.5rem 3rem 6rem rgba($color-black, 0.3);
+
+//BORDER-RADII
+
+$bord-rad-light: 3px;
+$bord-rad-medium: 0.5rem;
