--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     display: inline-block;
@@ -9,6 +10,10 @@
     transition: all 0.2s;
     position: relative;
     font-size: $default-font-size;
+
+    //change for the <button> element
+    cursor: pointer;
+    border: none;
   }
 
   &:hover {
@@ -21,7 +26,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translate(0, -1px) scale(0.98);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
@@ -66,7 +73,7 @@
   &:link,
   &:visited {
     font-size: $default-font-size;
-    padding: 0.5rem;
+    padding: 0.5rem 2rem;
     text-decoration: none;
     display: inline-block;
     color: $color-primary;
