--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,9 +11,13 @@
 @import 'components/composition';
 @import 'components/feature-box';
 @import 'components/card';
-@import 'components/story';
+@import 'components/testimonial';
+@import 'components/bg-video';
+@import 'components/form';
 
+@import 'layout/navigation';
 @import 'layout/grid';
 @import 'layout/header';
+@import 'layout/footer';
 
 @import 'pages/home';
