--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,68 @@ body {
 .form__radio-input {
   display: none; }
 
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 99;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s; }
+  .popup__content-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3);
+    border: 0.5rem solid #fff;
+    display: flex;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 0.8s 0.2s; }
+  .popup__left-side {
+    flex-basis: 33.3333333%;
+    overflow: hidden; }
+  .popup__right-side {
+    flex-basis: 66.66666666%;
+    align-self: center;
+    padding: 3rem 3rem; }
+  .popup__img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+    min-height: 50%;
+    border-radius: 3px;
+    overflow: hidden; }
+    .popup__img:not(:last-child) {
+      padding-bottom: 0.5rem; }
+  .popup__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #eee; }
+  .popup:target {
+    visibility: visible;
+    opacity: 1; }
+    .popup:target .popup__content-box {
+      transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    color: #575757;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    display: inline-block;
+    transition: all 0.2s;
+    line-height: 01; }
+  .popup__close:hover {
+    color: #45b86c; }
+
 .navigation__checkbox {
   display: none; }
 
@@ -492,6 +554,7 @@ body {
   z-index: 20;
   opacity: 0;
   width: 0;
+  visibility: hidden;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
 .navigation__list {
@@ -510,7 +573,7 @@ body {
   display: inline-block;
   font-size: 3rem;
   font-weight: 300;
-  padding: 1rem 2.5rem;
+  padding: 0.5rem 2.2rem;
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
@@ -531,7 +594,35 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
+  visibility: visible;
   width: 100%; }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 3.5rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    display: inline-block;
+    height: 2px;
+    width: 3rem;
+    background-color: #575757; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    transition: all 0.3s; }
+  .navigation__icon::before {
+    top: -0.8rem; }
+  .navigation__icon::after {
+    top: 0.8rem; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+    transform: rotate(-135deg);
+    top: 0; }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+    transform: rotate(135deg);
+    top: 0; }
 
 .row {
   max-width: 114rem;
