--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,8 +15,7 @@
     cursor: pointer;
     box-shadow: $box-shadow-medium;
   }
-  &__icon {
-  }
+
   &__background {
     position: fixed;
     top: 6.5rem;
@@ -39,6 +38,7 @@
     z-index: 20;
     opacity: 0;
     width: 0;
+    visibility: hidden;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
   &__list {
@@ -59,7 +59,7 @@
       display: inline-block;
       font-size: 3rem;
       font-weight: 300;
-      padding: 1rem 2.5rem;
+      padding: 0.5rem 2.2rem;
       color: $color-white;
       text-decoration: none;
       text-transform: uppercase;
@@ -91,6 +91,50 @@
 
   &__checkbox:checked ~ &__nav {
     opacity: 1;
+    visibility: visible;
     width: 100%;
+  }
+
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+    &,
+    &::before,
+    &::after {
+      display: inline-block;
+      height: 2px;
+      width: 3rem;
+      background-color: $color-grey-dark;
+    }
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      transition: all 0.3s;
+    }
+
+    &::before {
+      top: -0.8rem;
+    }
+
+    &::after {
+      top: 0.8rem;
+    }
+  }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+
+    &::before {
+      transform: rotate(-135deg);
+      top: 0;
+    }
+
+    &::after {
+      transform: rotate(135deg);
+      top: 0;
+    }
   }
 }
