--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,29 @@
   0% {
     opacity: 0;
     transform: translateY(3rem); }
+  80% {
+    transform: translateY(-0.5rem); }
   100% {
     transform: initial;
     opacity: initial; } }
+
+.fade-in {
+  opacity: 0;
+  transition: opacity 1.3s; }
+
+.fade-in.appear {
+  opacity: 1; }
+
+.slide-in {
+  opacity: 0;
+  transition: 3s; }
+  .slide-in.left {
+    transform: translateX(-100%); }
+  .slide-in.right {
+    transform: translateX(100%); }
+  .slide-in.left.appear, .slide-in.right.appear {
+    opacity: 1;
+    transform: translateX(0); }
 
 *,
 *::before,
@@ -40,7 +60,8 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem; }
+  padding: 3rem;
+  overflow-x: hidden; }
 
 .heading-primary {
   color: #fff;
@@ -55,13 +76,13 @@ body {
     letter-spacing: 3.5rem;
     font-size: 6rem;
     font-weight: 400;
-    animation: fromLeft 1s ease-out; }
+    animation: fromLeft 1.5s 0.5s ease-out backwards; }
   .heading-primary--sub {
     display: block;
     letter-spacing: 1.75rem;
     font-size: 2rem;
     font-weight: 700;
-    animation: fromRight 1s ease-out; }
+    animation: fromRight 2s 2s ease-out backwards; }
 
 body {
   font-family: 'Lato', sans-serif;
@@ -79,10 +100,8 @@ body {
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
-  letter-spacing: 0.2rem;
-  transition: all 0.2s; }
+  letter-spacing: 0.2rem; }
   .heading-secondary:hover {
-    transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5em 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .heading-tertiary {
@@ -119,7 +138,7 @@ body {
   text-decoration: none;
   padding: 1.5rem 4rem;
   border-radius: 10rem;
-  transition: all 0.2s;
+  transition: transform 0.2s, box-shadow 0.2s, opacity 1.3s;
   position: relative;
   font-size: 1.6rem;
   cursor: pointer;
@@ -162,8 +181,9 @@ body {
   transition: all 0.4s; }
 
 .btn--animated {
-  animation: fromBottom 0.5s ease-out 0.75;
-  animation-fill-mode: backwards; }
+  animation: fromBottom 1.2s ease-out backwards; }
+  .btn--animated-header {
+    animation-delay: 4s; }
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
@@ -323,34 +343,32 @@ body {
     font-size: 6rem;
     font-weight: 100; }
 
-.story {
+.testimonial {
   position: relative;
-  width: 75%;
+  width: 80%;
   margin: 0 auto;
   box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3);
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.65);
   border-radius: 3px;
-  padding: 6rem;
-  padding-left: 9rem;
+  padding: 6rem 10rem;
   font-size: 1.6rem;
-  transform: skewX(-12deg); }
-  .story__shape {
+  clip-path: polygon(8% 0, 100% 0, 92% 100%, 0 100%); }
+  .testimonial__shape {
+    position: relative;
     width: 15rem;
     height: 15rem;
     float: left;
     background-color: orange;
     -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skew(12deg); }
-  .story__img {
+    margin-right: 2.5rem;
+    clip-path: circle(50% at 50% 50%); }
+  .testimonial__img {
     height: 100%;
     transform: translateX(-3.7rem) scale(1.4);
     backface-visibility: hidden;
     transition: 0.5s; }
-  .story__text {
-    transform: skew(12deg); }
-  .story__caption {
+  .testimonial__caption {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -361,11 +379,11 @@ body {
     font-size: 1.7rem;
     opacity: 0;
     transition: 0.5s; }
-  .story:hover .story__caption {
+  .testimonial:hover .testimonial__caption {
     opacity: 1;
     transform: translate(-50%, -50%);
     backface-visibility: hidden; }
-  .story:hover .story__img {
+  .testimonial:hover .testimonial__img {
     transform: scale(1) translateX(-3.7rem);
     filter: blur(2px) brightness(80%); }
 
