--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -35,6 +35,10 @@
     transform: translateY(3rem);
   }
 
+  80% {
+    transform: translateY(-0.5rem);
+  }
+
   100% {
     transform: initial;
     opacity: initial;
