--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,7 +7,7 @@
     text-decoration: none;
     padding: 1.5rem 4rem;
     border-radius: 10rem;
-    transition: all 0.2s;
+    transition: transform 0.2s, box-shadow 0.2s, opacity 1.3s;
     position: relative;
     font-size: $default-font-size;
 
@@ -64,8 +64,11 @@
   }
 
   &--animated {
-    animation: fromBottom 0.5s ease-out 0.75;
-    animation-fill-mode: backwards;
+    animation: fromBottom 1.2s ease-out backwards;
+
+    &-header {
+      animation-delay: 4s;
+    }
   }
 }
 
