--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'abstracts/variables';
 
 @import 'base/animations';
+@import 'base/transitions';
 @import 'base/reset';
 @import 'base/typography';
 @import 'base/utilities';
