--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -9,11 +9,24 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; //10px
+
+  @include mqRespond(desktop-lg) {
+    font-size: 75%; //12px
+  }
+  @include mqRespond(tab-land) {
+    font-size: 56.25%; //9px
+  }
+  @include mqRespond(tab-port) {
+    font-size: 50%; //8px
+  }
 }
 
 body {
   box-sizing: border-box;
   padding: 3rem;
+  @include mqRespond(tab-port) {
+    padding: 0;
+  }
   overflow-x: hidden;
 }
