--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,5 +1,10 @@
 .composition {
   position: relative;
+  @include mqRespond(tab-port) {
+    position: static;
+    display: flex;
+  }
+
   &__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
@@ -8,17 +13,39 @@
     z-index: 1;
     outline-offset: 2rem;
 
+    @include mqRespond(tab-port) {
+      width: 33.33333%;
+      position: relative;
+      box-shadow: $box-shadow-xs;
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
+      @include mqRespond(tab-port) {
+        left: 0;
+        top: 0;
+        transform: scale(1.2);
+      }
     }
     &--p2 {
       right: 0;
       top: 2rem;
+      @include mqRespond(tab-port) {
+        right: 0;
+        top: -1.5rem;
+        transform: scale(1.3);
+        z-index: 2;
+      }
     }
     &--p3 {
       left: 20%;
       top: 10rem;
+      @include mqRespond(tab-port) {
+        left: 0;
+        top: 0;
+        transform: scale(1.2);
+      }
     }
     &:hover {
       transform: scale(1.05) translateY(-0.5rem);
