--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -14,6 +14,10 @@
     display: block;
     width: 90%;
 
+    @include mqRespond(tab-port) {
+      width: 100%;
+    }
+
     &::placeholder {
       color: $color-grey-dark;
     }
@@ -48,6 +52,11 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+
+    @include mqRespond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-label {
