--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -12,10 +12,11 @@
 
   &__content-box {
     @include absCenter;
+    width: 70%;
     background-color: $color-white;
     border-radius: $bord-rad-light;
     box-shadow: $box-shadow-medium;
-    border: 0.5rem solid $color-white;
+    padding: 0.5rem;
     display: flex;
     transform: translate(-50%, -50%) scale(0);
     transition: 0.8s 0.2s;
@@ -23,12 +24,17 @@
 
   &__left-side {
     flex-basis: 33.3333333%;
-    overflow: hidden;
+    @include mqRespond(tab-port) {
+      display: none;
+    }
   }
   &__right-side {
     flex-basis: 66.66666666%;
     align-self: center;
     padding: 3rem 3rem;
+    @include mqRespond(tab-port) {
+      flex-basis: 100%;
+    }
   }
 
   &__img {
@@ -48,6 +54,9 @@
     font-size: 1.4rem;
     margin-bottom: 4rem;
     column-count: 2;
+    @include mqRespond(tab-port) {
+      column-count: 1;
+    }
     column-gap: 4rem;
     column-rule: 1px solid $color-grey-light-2;
   }
