--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,7 +4,15 @@
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
+  @include mqRespond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
+    margin-bottom: 8rem;
+    @include mqRespond(tab-port) {
+      margin-bottom: 6rem;
+    }
   }
   &__logo {
     width: 15rem;
@@ -13,6 +21,11 @@
     border-top: 1px solid $color-grey-dark;
     display: inline-block;
     padding-top: 2rem;
+
+    @include mqRespond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
   &__list {
   }
@@ -44,5 +57,11 @@
     padding-top: 2rem;
     width: 85%;
     float: right;
+
+    @include mqRespond(tab-port) {
+      float: none;
+      width: 100%;
+      text-align: center;
+    }
   }
 }
