--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,12 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -25vh;
+  // margin-top: -20rem;
+
+  @include mqRespond(tab-port) {
+    padding: 20rem 0;
+    margin-top: -13vh;
+  }
 }
 
 .section-features {
@@ -19,17 +25,27 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include mqRespond(tab-port) {
+    padding: 12rem 0;
+  }
 }
 
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem;
   margin-top: -10rem;
+  @include mqRespond(tab-port) {
+    padding: 20rem 0 10rem;
+  }
 }
 
 .section-testimonials {
   position: relative;
   padding: 15rem 0;
+  @include mqRespond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-booking {
@@ -39,6 +55,9 @@
     $color-primary-light,
     $color-primary-dark
   );
+  @include mqRespond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .booking {
@@ -51,13 +70,39 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 50rem;
   width: 100%;
   border-radius: $bord-rad-light;
   box-shadow: $box-shadow-medium;
 
+  @include mqRespond(tab-land) {
+    background: linear-gradient(
+        105deg,
+        rgba($color-white, 0.85) 0%,
+        rgba($color-white, 0.85) 65%,
+        transparent 65%
+      ),
+      url(../img/nat-10.jpg);
+  }
+
+  @include mqRespond(tab-port) {
+    background: linear-gradient(
+        105deg,
+        rgba($color-white, 0.85) 0%,
+        rgba($color-white, 0.85) 100%
+      ),
+      url(../img/nat-10.jpg);
+  }
+
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include mqRespond(tab-land) {
+      width: 65%;
+    }
+
+    @include mqRespond(tab-port) {
+      width: 100%;
+    }
   }
 }
